completed notebook for importing data into personalize

--- a/dataset/aws-summit-personalize.ipynb
+++ b/dataset/aws-summit-personalize.ipynb
@@ -62,6 +62,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arn:aws:iam::866716849012:role/aws-summit-hk-personalize-role\n"
+     ]
+    }
+   ],
+   "source": [
+    "iam = boto3.client(\"iam\")\n",
+    "\n",
+    "role_name = \"aws-summit-hk-personalize-role\"\n",
+    "assume_role_policy_document = {\n",
+    "    \"Version\": \"2012-10-17\",\n",
+    "    \"Statement\": [\n",
+    "        {\n",
+    "          \"Effect\": \"Allow\",\n",
+    "          \"Principal\": {\n",
+    "            \"Service\": \"personalize.amazonaws.com\"\n",
+    "          },\n",
+    "          \"Action\": \"sts:AssumeRole\"\n",
+    "        }\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "create_role_response = iam.create_role(\n",
+    "    RoleName = role_name,\n",
+    "    AssumeRolePolicyDocument = json.dumps(assume_role_policy_document)\n",
+    ");\n",
+    "\n",
+    "iam.attach_role_policy(\n",
+    "    RoleName = role_name,\n",
+    "    PolicyArn = \"arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess\"\n",
+    ");\n",
+    "\n",
+    "role_arn = create_role_response[\"Role\"][\"Arn\"]\n",
+    "print(role_arn)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -189,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
@@ -216,56 +260,78 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>USER_ID</th>\n",
+       "      <th>OCCUPATION</th>\n",
+       "      <th>GENDER</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
+       "      <td>Diagnostic radiographer</td>\n",
+       "      <td>M</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
+       "      <td>Therapist, sports</td>\n",
+       "      <td>M</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
+       "      <td>Catering manager</td>\n",
+       "      <td>F</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
+       "      <td>Psychologist, sport and exercise</td>\n",
+       "      <td>F</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
+       "      <td>Visual merchandiser</td>\n",
+       "      <td>F</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   USER_ID\n",
-       "0        1\n",
-       "1        2\n",
-       "2        3\n",
-       "3        4\n",
-       "4        5"
+       "   USER_ID                        OCCUPATION GENDER\n",
+       "0        1           Diagnostic radiographer      M\n",
+       "1        2                 Therapist, sports      M\n",
+       "2        3                  Catering manager      F\n",
+       "3        4  Psychologist, sport and exercise      F\n",
+       "4        5               Visual merchandiser      F"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from faker import Faker\n",
+    "fake = Faker()\n",
+    "\n",
     "users_df = pd.DataFrame(pd.read_csv('ratings.csv')['userId'].unique())\n",
-    "users_df.columns = ['USER_ID']\n",
+    "\n",
+    "for i, row in users_df.iterrows():\n",
+    "    profile = fake.profile(fields=None, sex=None)\n",
+    "    users_df.at[i, 'OCCUPATION'] = profile['job']\n",
+    "    users_df.at[i, 'GENDER'] = profile['sex']\n",
+    "\n",
+    "users_df.columns = ['USER_ID', 'OCCUPATION', 'GENDER']\n",
+    "    \n",
     "users_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,14 +491,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create Schemas"
+    "# Import interaction data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Interaction Schema"
+    "### Create Interaction Schema"
    ]
   },
   {
@@ -535,6 +601,203 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"datasetImportJobArn\": \"arn:aws:personalize:us-west-2:866716849012:dataset-import-job/movielens-ratings-import-job-1\",\n",
+      "  \"ResponseMetadata\": {\n",
+      "    \"RequestId\": \"87a1d1b8-5c3b-4200-b6d7-2f55e09135b0\",\n",
+      "    \"HTTPStatusCode\": 200,\n",
+      "    \"HTTPHeaders\": {\n",
+      "      \"content-type\": \"application/x-amz-json-1.1\",\n",
+      "      \"date\": \"Tue, 21 May 2019 14:27:09 GMT\",\n",
+      "      \"x-amzn-requestid\": \"87a1d1b8-5c3b-4200-b6d7-2f55e09135b0\",\n",
+      "      \"content-length\": \"118\",\n",
+      "      \"connection\": \"keep-alive\"\n",
+      "    },\n",
+      "    \"RetryAttempts\": 0\n",
+      "  }\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_dataset_import_job_response = personalize.create_dataset_import_job(\n",
+    "    jobName = \"movielens-ratings-import-job-1\",\n",
+    "    datasetArn = dataset_arn,\n",
+    "    dataSource = {\n",
+    "        \"dataLocation\": \"s3://{}/{}\".format(bucket, user_interaction)\n",
+    "    },\n",
+    "    roleArn = role_arn\n",
+    ")\n",
+    "\n",
+    "dataset_import_job_arn = create_dataset_import_job_response['datasetImportJobArn']\n",
+    "print(json.dumps(create_dataset_import_job_response, indent=2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import User Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"schemaArn\": \"arn:aws:personalize:us-west-2:866716849012:schema/personalens-user-schema\",\n",
+      "  \"ResponseMetadata\": {\n",
+      "    \"RequestId\": \"5817c06c-e34d-4bb6-9332-83df93f4b94e\",\n",
+      "    \"HTTPStatusCode\": 200,\n",
+      "    \"HTTPHeaders\": {\n",
+      "      \"content-type\": \"application/x-amz-json-1.1\",\n",
+      "      \"date\": \"Tue, 21 May 2019 15:45:23 GMT\",\n",
+      "      \"x-amzn-requestid\": \"5817c06c-e34d-4bb6-9332-83df93f4b94e\",\n",
+      "      \"content-length\": \"89\",\n",
+      "      \"connection\": \"keep-alive\"\n",
+      "    },\n",
+      "    \"RetryAttempts\": 0\n",
+      "  }\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_schema = {\n",
+    "    \"type\": \"record\",\n",
+    "    \"name\": \"Users\",\n",
+    "    \"namespace\": \"com.amazonaws.personalize.schema\",\n",
+    "    \"fields\": [\n",
+    "        {\n",
+    "            \"name\": \"USER_ID\",\n",
+    "            \"type\": \"string\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"name\": \"OCCUPATION\",\n",
+    "            \"type\": \"string\",\n",
+    "            \"categorical\": True\n",
+    "            \n",
+    "        },\n",
+    "        {\n",
+    "            \"name\": \"GENDER\",\n",
+    "            \"type\": \"string\",\n",
+    "            \"categorical\": True\n",
+    "        }\n",
+    "    ],\n",
+    "    \"version\": \"1.0\"\n",
+    "}\n",
+    "\n",
+    "create_schema_response = personalize.create_schema(\n",
+    "    name = \"personalens-user-schema\",\n",
+    "    schema = json.dumps(user_schema)\n",
+    ")\n",
+    "\n",
+    "schema_arn = create_schema_response['schemaArn']\n",
+    "print(json.dumps(create_schema_response, indent=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"datasetArn\": \"arn:aws:personalize:us-west-2:866716849012:dataset/aws-summit-hk-personalens-dataset-group/USERS\",\n",
+      "  \"ResponseMetadata\": {\n",
+      "    \"RequestId\": \"003a06f6-417c-4db6-a100-5d69b469596e\",\n",
+      "    \"HTTPStatusCode\": 200,\n",
+      "    \"HTTPHeaders\": {\n",
+      "      \"content-type\": \"application/x-amz-json-1.1\",\n",
+      "      \"date\": \"Tue, 21 May 2019 15:46:15 GMT\",\n",
+      "      \"x-amzn-requestid\": \"003a06f6-417c-4db6-a100-5d69b469596e\",\n",
+      "      \"content-length\": \"113\",\n",
+      "      \"connection\": \"keep-alive\"\n",
+      "    },\n",
+      "    \"RetryAttempts\": 0\n",
+      "  }\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset_type = \"Users\"\n",
+    "create_dataset_response = personalize.create_dataset(\n",
+    "    name = \"movielens_users\",\n",
+    "    datasetType = dataset_type,\n",
+    "    datasetGroupArn = dataset_group_arn,\n",
+    "    schemaArn = schema_arn\n",
+    ")\n",
+    "\n",
+    "dataset_arn = create_dataset_response['datasetArn']\n",
+    "print(json.dumps(create_dataset_response, indent=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"datasetImportJobArn\": \"arn:aws:personalize:us-west-2:866716849012:dataset-import-job/movielens-users-import-job-1\",\n",
+      "  \"ResponseMetadata\": {\n",
+      "    \"RequestId\": \"66a3bb85-c2eb-4c1b-9673-f65f3f9c8785\",\n",
+      "    \"HTTPStatusCode\": 200,\n",
+      "    \"HTTPHeaders\": {\n",
+      "      \"content-type\": \"application/x-amz-json-1.1\",\n",
+      "      \"date\": \"Tue, 21 May 2019 15:46:41 GMT\",\n",
+      "      \"x-amzn-requestid\": \"66a3bb85-c2eb-4c1b-9673-f65f3f9c8785\",\n",
+      "      \"content-length\": \"116\",\n",
+      "      \"connection\": \"keep-alive\"\n",
+      "    },\n",
+      "    \"RetryAttempts\": 0\n",
+      "  }\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_dataset_import_job_response = personalize.create_dataset_import_job(\n",
+    "    jobName = \"movielens-users-import-job-1\",\n",
+    "    datasetArn = dataset_arn,\n",
+    "    dataSource = {\n",
+    "        \"dataLocation\": \"s3://{}/{}\".format(bucket, user_metadata)\n",
+    "    },\n",
+    "    roleArn = role_arn\n",
+    ")\n",
+    "\n",
+    "dataset_import_job_arn = create_dataset_import_job_response['datasetImportJobArn']\n",
+    "print(json.dumps(create_dataset_import_job_response, indent=2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import Item Data"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -543,13 +806,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"schemaArn\": \"arn:aws:personalize:us-west-2:866716849012:schema/personalens-item-schema\",\n",
+      "  \"ResponseMetadata\": {\n",
+      "    \"RequestId\": \"a20714bb-80fe-4731-9614-1aad03ef0fd4\",\n",
+      "    \"HTTPStatusCode\": 200,\n",
+      "    \"HTTPHeaders\": {\n",
+      "      \"content-type\": \"application/x-amz-json-1.1\",\n",
+      "      \"date\": \"Tue, 21 May 2019 16:03:32 GMT\",\n",
+      "      \"x-amzn-requestid\": \"a20714bb-80fe-4731-9614-1aad03ef0fd4\",\n",
+      "      \"content-length\": \"89\",\n",
+      "      \"connection\": \"keep-alive\"\n",
+      "    },\n",
+      "    \"RetryAttempts\": 0\n",
+      "  }\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "item_schema = {\n",
     "    \"type\": \"record\",\n",
-    "    \"name\": \"Item\",\n",
+    "    \"name\": \"Items\",\n",
     "    \"namespace\": \"com.amazonaws.personalize.schema\",\n",
     "    \"fields\": [\n",
     "        {\n",
@@ -558,7 +843,8 @@
     "        },\n",
     "        {\n",
     "            \"name\": \"MOVIE_TITLE\",\n",
-    "            \"type\": \"string\"\n",
+    "            \"type\": \"string\",\n",
+    "            \"categorical\": True\n",
     "        },\n",
     "        {\n",
     "            \"name\": \"GENRE\",\n",
@@ -567,12 +853,109 @@
     "        },\n",
     "        {\n",
     "            \"name\": \"RELEASE_DATE\",\n",
-    "            \"type\": \"long\"\n",
+    "            \"type\": \"string\",\n",
+    "            \"categorical\": True\n",
     "        }\n",
     "    ],\n",
     "    \"version\": \"1.0\"\n",
-    "}"
+    "}\n",
+    "\n",
+    "create_schema_response = personalize.create_schema(\n",
+    "    name = \"personalens-item-schema\",\n",
+    "    schema = json.dumps(item_schema)\n",
+    ")\n",
+    "\n",
+    "schema_arn = create_schema_response['schemaArn']\n",
+    "print(json.dumps(create_schema_response, indent=2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"datasetArn\": \"arn:aws:personalize:us-west-2:866716849012:dataset/aws-summit-hk-personalens-dataset-group/ITEMS\",\n",
+      "  \"ResponseMetadata\": {\n",
+      "    \"RequestId\": \"163a0ad7-c36d-4e89-b2b6-c644a61e466b\",\n",
+      "    \"HTTPStatusCode\": 200,\n",
+      "    \"HTTPHeaders\": {\n",
+      "      \"content-type\": \"application/x-amz-json-1.1\",\n",
+      "      \"date\": \"Tue, 21 May 2019 16:04:27 GMT\",\n",
+      "      \"x-amzn-requestid\": \"163a0ad7-c36d-4e89-b2b6-c644a61e466b\",\n",
+      "      \"content-length\": \"113\",\n",
+      "      \"connection\": \"keep-alive\"\n",
+      "    },\n",
+      "    \"RetryAttempts\": 0\n",
+      "  }\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset_type = \"Items\"\n",
+    "create_dataset_response = personalize.create_dataset(\n",
+    "    name = \"movielens_items\",\n",
+    "    datasetType = dataset_type,\n",
+    "    datasetGroupArn = dataset_group_arn,\n",
+    "    schemaArn = schema_arn\n",
+    ")\n",
+    "\n",
+    "dataset_arn = create_dataset_response['datasetArn']\n",
+    "print(json.dumps(create_dataset_response, indent=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"datasetImportJobArn\": \"arn:aws:personalize:us-west-2:866716849012:dataset-import-job/movielens-items-import-job-1\",\n",
+      "  \"ResponseMetadata\": {\n",
+      "    \"RequestId\": \"7018c2b3-725d-47c6-8fe8-7346926482b1\",\n",
+      "    \"HTTPStatusCode\": 200,\n",
+      "    \"HTTPHeaders\": {\n",
+      "      \"content-type\": \"application/x-amz-json-1.1\",\n",
+      "      \"date\": \"Tue, 21 May 2019 16:05:05 GMT\",\n",
+      "      \"x-amzn-requestid\": \"7018c2b3-725d-47c6-8fe8-7346926482b1\",\n",
+      "      \"content-length\": \"116\",\n",
+      "      \"connection\": \"keep-alive\"\n",
+      "    },\n",
+      "    \"RetryAttempts\": 0\n",
+      "  }\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_dataset_import_job_response = personalize.create_dataset_import_job(\n",
+    "    jobName = \"movielens-items-import-job-1\",\n",
+    "    datasetArn = dataset_arn,\n",
+    "    dataSource = {\n",
+    "        \"dataLocation\": \"s3://{}/{}\".format(bucket, item_metadata)\n",
+    "    },\n",
+    "    roleArn = role_arn\n",
+    ")\n",
+    "\n",
+    "dataset_import_job_arn = create_dataset_import_job_response['datasetImportJobArn']\n",
+    "print(json.dumps(create_dataset_import_job_response, indent=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
