Added image import script

--- a/dataset/aws-summit-personalize.ipynb
+++ b/dataset/aws-summit-personalize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,11 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = boto3.resource('dynamodb', region_name='us-west-2')\n",
     "personalize = boto3.client(service_name='personalize', endpoint_url='https://personalize.us-west-2.amazonaws.com')\n",
     "personalize_runtime = boto3.client(service_name='personalize-runtime', endpoint_url='https://personalize-runtime.us-west-2.amazonaws.com')\n",
     "\n",
@@ -30,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -90,18 +89,20 @@
     "        }\n",
     "    ]\n",
     "}\n",
+    "try:\n",
+    "    role_arn = iam.get_role(RoleName=role_name)[\"Role\"][\"Arn\"]\n",
+    "except iam.exceptions.NoSuchEntityException: \n",
+    "    create_role_response = iam.create_role(\n",
+    "        RoleName = role_name,\n",
+    "        AssumeRolePolicyDocument = json.dumps(assume_role_policy_document)\n",
+    "    );\n",
     "\n",
-    "create_role_response = iam.create_role(\n",
-    "    RoleName = role_name,\n",
-    "    AssumeRolePolicyDocument = json.dumps(assume_role_policy_document)\n",
-    ");\n",
+    "    iam.attach_role_policy(\n",
+    "        RoleName = role_name,\n",
+    "        PolicyArn = \"arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess\"\n",
+    "    );\n",
     "\n",
-    "iam.attach_role_policy(\n",
-    "    RoleName = role_name,\n",
-    "    PolicyArn = \"arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess\"\n",
-    ");\n",
-    "\n",
-    "role_arn = create_role_response[\"Role\"][\"Arn\"]\n",
+    "    role_arn = create_role_response[\"Role\"][\"Arn\"]\n",
     "print(role_arn)"
    ]
   },
